--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,6 +5,102 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 0 0;
+}
+
+.header-block {
+  background-image: url("../images/bgtile.png");
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 300px;
+  width: 100%;
+  margin-bottom: -290px;
+}
+
+.main {
+  width: 1000px;
+  margin: 0 auto;
+  padding: 100px 0 50px 0;
+}
+.main img {
+  box-sizing: border-box;
+}
+.container {
+  width: 52%;
+  float: right;
+  box-sizing: border-box;
+  padding: 30px 0;
+}
+
+.insta-logo {
+  padding-left: 5px;
+}
+
+.log-in-button {
+  text-decoration: none;
+  color: rgba(255,255,255,.8);
+  background-color: rgb(88, 119, 151);
+  padding: 10px;
+  padding-left: 45px;
+  font-size: 14px;
+  font-weight: 700;
+  border: 1px solid #4a6a8b;
+  border-radius: 5%;
+  float: right;
+  margin-right: 7px;
+  margin-top: 15px;
+  background: linear-gradient(#9bafc2, #4a6a8b);
+}
+
+.log-in-button img {
+  padding: 0 10px 0 0;
+  position: absolute;
+  right: 278px;
+  top: 165px;
+}
+
+.content {
+  background-image: url("../images/frame.png");
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding: 20px 50px;
+}
+
+.content h2 {
+  color: #06365f;
+}
+
+.content p {
+  line-height: 22px;
+}
+
+.content img {
+  padding: 20px 10px 20px 0;
+}
+
+.footer {
+  width: 100%;
+  padding: 10px;
+  padding-top: 20px;
+  text-align: center;
+  font-size: 12px;
+  font-weight: 700;
+  margin: auto;
+}
+
+.footer a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: rgb(88, 119, 151);
+  padding: 5px;
+}
+
+.footer p {
+  text-transform: uppercase;
+  color: rgb(228,228,228);
+  display: inline;
+  padding: 20px;
 }
