--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,91 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+  position: cover;
+  top: 0;
+  width: 100%;
+  height: 100%;
+
+}
+
+.darkBlue {
+  color: #06365f;
+}
+.navigation {
+  text-decoration-style: none;
+  text-decoration: none;
+  text-align: center;
+  display: inline-block;
+  padding-right: 2px;
+  width: 825px;
+  height: 50px;
+  clear: both;
+}
+.mainInfo {
+  overflow: auto;
+  box-sizing: border-box;
+  padding: 10px;
+  width: 1100px;
+  padding-top: 150px;
+  padding-left: 150px;
+}
+.floatL {
+  float: left;
+  padding-left: 10px;
+}
+.phoneImg {
+  float: left;
+  padding: 10px 10px 0 0;
+  height: 550px;
+  width: 35%;
+}
+.infoParagraph {
+  float: left;
+  padding: 15px 0 0 30px;
+  box-sizing: border-box;
+  width: 500px;
+  height: 400px;
+  border: 1px ridge lightgrey;
+  margin: 0 75px 0 0;
+}
+.homeBtnLocation {
+  padding-top: 50px;
+  padding-right: 45px;
+  margin-right: 45px;
+}
+.homeBtn {
+  float: right;
+  background-color: #06365f;
+  box-sizing: border-box;
+  width: 100px;
+  padding-right: 5px;
+  color: white;
+  font-size: 20px;
+  text-align: center;
+}
+.foot {
+  clear: both;
+  list-style: none;
+}
+.links1 {
+  float: left;
+  width: 5px;
+  height: 5px;
+  margin: 0 auto;
+  padding: 45px 120px 10px 15px;
+}
+.links2 {
+  float: left;
+  width: 5px;
+  height: 5px;
+  margin: 0 auto;
+  padding: 45px 15px 10px 120px;
+}
+.table {
+  align: center;
+  text-align: center;
+  padding-left: 180px;
+  text-align: center;
+  text-decoration: none!important;
 }
