--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -19,7 +19,7 @@ body {
 
 }
 
-.main-txt {
+.main-txt-container {
   width: 500px;
   height: 200px;
   background-image: url('../images/frame.png');
@@ -39,11 +39,13 @@ body {
  position: absolute;
  bottom: 595px;
  left: 1039px;
- border: 1px solid #1c5380;
+ border: 2px solid #06365f;
+ border-radius: 3px;
  background-color: #1c5380;
  color: white;
  text-align: center;
  padding: 1px 10px;
+
 }
 
 .blue-heading-container {
@@ -51,7 +53,8 @@ body {
   z-index: -1;
   width: 100%;
   height: 280px;
-  background-color: #1c5380;
+  background-color: #125688;
+  border-bottom: 2px solid #06365f;
 }
 
 /*----TEXT----*/
@@ -70,8 +73,9 @@ a {
   text-decoration: none;
   color: #1c5380;
   margin-left: 20px;
-
 }
+
+
 /*----IMAGES----*/
 
 .phones {
