--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,67 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.container{
+  margin: 65px auto 55px auto;
+  width: 800px;
+  overflow: auto;
+}
+
+
+h1{
+  float: left;
+}
+
+
+ button{
+   float: right;
+   background-color: #1c5380;
+   margin: 5px;
+   border: 1px solid #06365f;
+   border-radius: 10%;
+   padding: 2px 10px;
+ }
+
+ button p{
+   float: right;
+   color: white;
+ }
+
+ h2{
+   color: #06365f;
+ }
+
+ .aside{
+   float: left;
+   width: 40%;
+ }
+
+ .main{
+   /*background-color: #1c5389;*/
+   margin: 0 auto;
+   float: right;
+   width: 45%;
+   padding: 5%;
+   border-radius: 12%;
+ }
+
+ .app1{
+   float: left;
+   margin-right: 10px;
+ }
+
+ .app2{
+   float: left;
+ }
+
+ footer{
+   text-align: center;
+   padding-bottom: 10%;
+   color: #06365f;
+   text-transform: uppercase;
+ }
+
+ span{
+   color: grey;
+ }
