--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,73 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+header {
+  background-color: #1c5380;
+  height: 250px;
+  width: 100%;
+  position: absolute;
+  z-index: -1;
+}
+#content {
+  width: 70%;
+  margin: auto;
+  padding-top: 100px;
+  display: flex;
+}
+#izquierdo {
+  margin-right: 50px;
+  max-width: 30%,
+}
+#derecho {
+  width: 100%;
+  min-width: 500px;
+}
+#superior-derecho {
+  display: flex;
+  margin-bottom: 25px;
+}
+#logo {
+  width: 40%;
+}
+#inferior-derecho {
+  border: 1px solid red;
+  background-image: url(../images/frame.png);
+  background-size:contain;
+  background-repeat: no-repeat;
+  box-sizing: border-box;
+  padding: 30px;
+}
+.title {
+  font-size: 1.3em;
+  color: #06365f;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+p {
+  margin-bottom: 10px;
+}
+footer {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 70px;
+  width: 40%;
+  margin: auto;
+  font-size: 0.7em;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #1c5380;
+
+}
+footer span {
+  margin: 5px;
+
 }
