--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,6 +5,109 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 200 16px/1.5 'Helvetica Neue', Helvetica, Arial, sans-serif;
   margin: 0;
+}
+.title {
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat;
+  width: 100%;
+  height: 300px;
+}
+aside {
+  display: inline-block;
+  margin-top: -239px;
+  width: 33%;
+  padding-left: 10%;
+}
+aside img {
+  width: 400px;
+}
+.brand {
+  display: inline-block;
+  width: 50%;
+  vertical-align: top;
+  margin-top: -228px;
+}
+.brand-title {
+  margin-bottom: 20px;
+}
+.brand-title > img {
+  width: 500px;
+  vertical-align: middle;
+  margin-right: 20px;
+}
+.brand-title button {
+  float: right;
+  margin-top: 38px;
+  padding: 15px 22px;
+  background: #3b6890;
+  border: 1px solid rgb(33, 86, 129);
+  color: #fff;
+  font-size: 16px;
+  border-radius: 4px;
+  background: linear-gradient(
+    to bottom,
+    rgb(113, 155, 204) 0%,
+    rgba(58, 104, 144, 1) 100%
+  );
+}
+button img {
+  vertical-align: middle;
+  margin-right: 5px;
+  margin-top: -4px;
+}
+.instagram-message {
+  background: #fff;
+  border-radius: 4px;
+  width: 90%;
+  padding: 2% 5%;
+  box-shadow: 0 -4px 6px rgba(59, 104, 144, 0.32);
+}
+.instagram-message h1 {
+  width: 56%;
+  font-size: 35px;
+  font-weight: bold;
+  color: #06365f;
+  margin-top: 15px;
+}
+.instagram-message p {
+  font-size: 20px;
+  font-weight: 200;
+  color: grey;
+}
+.instagram-message span {
+  color: #000;
+  font-weight: 400;
+}
+.store {
+  box-shadow: 1px -100px 9px 20px white;
+  z-index: 10;
+  height: 200px;
+}
+.store-btn {
+  margin-left: 5%;
+}
+.store-btn {
+  width: 210px;
+}
+.android-btn {
+  width: 195px;
+  margin-left: 3%;
+}
+.list-menu {
+  text-align: center;
+  margin-left: -90px;
+}
+.menu-item {
+  display: inline-block;
+  margin-right: 25px;
+  color: #1c5380;
+  font-weight: bold;
+}
+.special-item {
+  color: grey;
+}
+footer {
+  margin-top: -90px;
 }
