--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,7 +7,9 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
-  background-color: #486294;
+  background-image:url(../images/bgtile.png);
+  background-repeat:repeat-x;
+   background-color: #F4F4F7;
 
 
 }
@@ -15,7 +17,6 @@ body {
   margin:30px;
   padding-top: 50px;
   padding-left: 100px;
-  align-items: center;
 
 }
 .phone{
@@ -29,37 +30,42 @@ body {
 }
 
 .cabecera{
+margin-bottom: 10px;
 }
 
 .logo{
   width: 60%;
-  float: left;
-  clear: both;
 }
 
-.login-buttom{
-  font-size: : 16px;
+.login-button{
   font-weight: bold;
   color: white;
-  background-color: #486294;
+  text-align: center;
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-blend-mode: soft-light;
+  background-color: #1c5380;
   padding: 10px;
   height: auto;
   width: 100px;
-  border: 2px solid #1C2C5F;
+  border: 0.5px solid #1c5380;
   border-radius:5px;
   float: right;
-  clear:both;
+  margin-top: 3%;
+
+
 }
 
   .home{
-    vertical-align: middle;
+    vertical-align: top;
+    padding-right: 5px;
   }
 
 .bloque-blanco{
-  background-color: lightgray;
   height: auto;
   width: 500px;
-  padding: 30px;
+  padding: 50px;
   float: inherit;
   background-image: url(../images/frame.png);
   background-size: contain;
@@ -68,16 +74,30 @@ body {
 
 }
 
-h2{
+.titulo{
   font-size: 28px;
-  color: #1C2C5F;
+  font-weight: bold;
+  color: #06365f;
 }
 .content{
   font-size: 20px;
 }
 
 .footer{
-  font-size: 18px;
-  text-transform: capitalize;
-  justify-content: center;
+  font-size: 16px;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #1c5380;
+  text-align: center;
+  clear:both;
+}
+.list-footer{
+  float: left;
+margin-left: 30%;
+}
+
+.copyright{
+  color:#BDBDBD;
+  float:left;
+  padding-left: 20px;
 }
