--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -19,7 +19,7 @@ header {
   z-index: -1;
 }
 #content {
-  width: 70%;
+  max-width: 960px;
   margin: auto;
   padding-top: 90px;
   flex-flow: column wrap;
@@ -79,6 +79,7 @@ header {
   font-weight: bold;
   margin-bottom: 15px;
   max-width: 250px;
+  line-height: 28px;
 }
 p {
   margin-bottom: 10px;
@@ -93,16 +94,18 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: auto;
   min-width: 550px;
   font-size: 0.7em;
   font-weight: bold;
   text-transform: uppercase;
   color: #1c5380;
-
+  margin-bottom: 30px;
+  max-width: 960px;
+  margin: auto;
 }
 footer span {
   margin: 10px;
+  white-space:nowrap;
 }
 .copyright{
   color: grey;
