--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -45,7 +45,6 @@ body {
 }
 
 .box-main{
-	border: 1px solid black;
 	width: 80%;
 	height: 700px;
 	margin-top: 5%;
@@ -59,7 +58,6 @@ body {
 	height: 80%;
 	background-image: url("../images/phones.png");
 	background-repeat: no-repeat;
-    border: 1px solid green;
 	margin-top: 1%;
 	margin-left: 15%;
 }
@@ -69,7 +67,6 @@ body {
 	float: left;
 	width: 60%;
 	height: 15%;
-	border: 1px solid blue;
 	margin-top: 1%;
 	margin-left: 2%;
 
@@ -81,7 +78,6 @@ body {
 	float: left;
 	width: 40%;
 	height: 80%;
-	border: 1px solid blue;
 	margin-top: 1%;
 	margin-left: 2%;
 	background-image: url("../images/brand.png");
@@ -93,7 +89,6 @@ body {
 	float: left;
 	width: 40%;
 	height: 80%;
-	border: 1px solid blue;
 	margin-top: 1%;
 	margin-left: 2%;
 }
@@ -122,7 +117,6 @@ body {
 	float: left;
 	width: 50%;
 	height: 65%;
-	border: 1px solid black;
 	margin-top: 0%;
 	margin-left: 2%;
 	background-image: url("../images/frame.png");
@@ -190,20 +184,34 @@ body {
 .box-links{
 	position: relative;
 	display:inline-block;
-	width: 75%;
+	width: 70%;
 	height: 20%;
 	margin-top: 5%;
 	margin-left: 20%;
 	
+	
+	
 }
 
-.about{
+.link{
 	position: relative;
 	float:left;
-	width: 20%;
-	height: 20%;	
+	width: 7%;
+	height: 10%;
+	margin-top: 1%;
+	margin-left: 2%;
+	font-family: verdana;
+	font-weight: bold;
+	color : rgb(8, 8, 131);
 }
 
-.box.down{
-
+.copyright{
+	position: relative;
+	float:left;
+	width: 7%;
+	height: 10%;
+	margin-top: 1%;
+	margin-left: 2%;	
+	
 }
+
