fix: refactor code

--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -129,11 +129,15 @@ a {
 
 @media screen and (max-width:1400px) {
   .contentBox h1 {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
   }
 
   .phones {
-    margin: 7% 5% 3% 18%;
+    margin: 5% 5% 3% 18%;
+  }
+
+  .pageHead {
+    padding-top: 6%;
   }
 
   .head {
@@ -154,12 +158,13 @@ a {
   }
 
   button p {
-    font-size: 1rem;
+    font-size: 0.8rem;
     margin: 7% 10%;
   }
 
   .contentBox {
-    font-size: 1rem;
+    font-size: 0.9rem;
+    padding-top: 2%;
   }
 
   .pageFoot ul {
@@ -168,7 +173,7 @@ a {
 
   .pageFoot li, .pageFoot div {
     margin-right: 0.5%;
-    font-size: 1rem;
+    font-size: 0.8rem;
   }
 
   a {
