--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -9,14 +9,24 @@ body {
   color: #06365f;
   margin: 0;
 }
-
+.blue{
+  background-color: #06365f;
+  height: 50vh;
+}
 .images{
- float: left;
+  padding-left: 40px;
+  padding-right: 20px;
+  float: left;
+  z-index: 3;
+  position: relative;
 }
 
 .text{
+  padding-left: 20px;
   background-image: url("/Users/ameliasalgado/Documents/Ironhack/lab-css-instagram-clone/starter-code/images/frame.png");
-  background-repeat:no-repeat;    
+  background-repeat:no-repeat;   
+  z-index: 3; 
+  
   /*background-size: 100% 100vh;*/
   
 }
